# NeuralNetworks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
NeuralNetworkKernels/: ObjectiveFunctions.cu  ObjectiveFunctions.cuh
NeuralNetworks/: ISerializable.h  MiniBatchData.h  MiniBatchData.tpp  Network.h  Network.tpp  NeuralNetworksManager.cpp  NeuralNetworksManager.h  Stopwatch.h  TrainingData.h
NeuralNetworks/Activations/: ActivationFunctionFactory.h  ActivationFunctionType.h  All.h  BentIdentityActivationFunction.h  ExponentialLinearUnitActivationFunction.h  HyperbolicTangentActivationFunction.h  IActivationFunction.h  InverseSquareRootLinearUnitActivationFunction.h  LeakyRectifiedLinearUnitActivationFunction.h  RectifiedLinearUnitActivationFunction.h  SigmoidActivationFunction.h  SoftMaxActivationFunction.h
NeuralNetworks/CostFunctions/: All.h  CostFunction.h  CostFunctionType.h  CrossEntropyCostFunction.h  CrossEntropyCostFunctionSigmoid.h  CrossEntropyCostFunctionSoftMax.h  ICostFunction.h  LogLikelihoodCostFunction.h  QuadraticCostFunction.h  SimpleGradientCostFunction.h
NeuralNetworks/Initializers/: IBiasWeightInitializer.h  RandomBiasWeightInitializer.h  SmallVarianceRandomBiasWeightInitializer.h  ZeroBiasWeightInitializer.h
NeuralNetworks/Layers/: All.h  DenseLayer.h  ILayer.h  Layer.h  LayerFactory.h  LayerType.h  NetworkTopology.h  SoftMaxLayer.h
NeuralNetworks/Layers/Initializers/: All.h  IBiasWeightInitializer.h  RandomBiasWeightInitializer.h  SmallVarianceRandomBiasWeightInitializer.h  TrivialBiasWeightInitializer.h  ZeroBiasWeightInitializer.h
NeuralNetworks/Optimizers/: All.h  BatchedGradientOptimizer.h  BatchedOptimizer.h  BatchedStochasticGradientDescent.h  GradientOptimizer.h  IOptimizer.h  MiniBatchData.h  Optimizer.h
NeuralNetworks/Optimizers/Shufflers/: All.h  IdentityShuffler.h  RandomShuffler.h
NeuralNetworks/Shufflers/: All.h  IShuffler.h  IdentityShuffler.h  RandomShuffler.h
UnitTests/: DataUnitTests.cpp  NetworkUnitTests.cpp
cmake/: All.cmake  Common.cmake  Configurations.cmake  CudaFlags.cmake  DebugFlags.cmake  Flags.cmake  OptimizationFlags.cmake  Options.cmake  SanitizerFlags.cmake  TargetUtilities.cmake  Warnings.cmake
